--- a/serverless-java/pom.xml
+++ b/serverless-java/pom.xml
@@ -2,10 +2,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.serverless</groupId>
-  <artifactId>aws-java-native</artifactId>
+  <artifactId>javalambda</artifactId>
   <packaging>jar</packaging>
   <version>dev</version>
-  <name>aws-java-native</name>
+  <name>javalambda</name>
 
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
@@ -14,11 +14,6 @@
   </properties>
 
   <dependencies>
-  	<dependency>
-	    <groupId>net.java.dev.jna</groupId>
-	    <artifactId>jna</artifactId>
-	    <version>5.5.0</version>
-	</dependency>
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-lambda-java-core</artifactId>
@@ -46,7 +41,6 @@
     </dependency>
   </dependencies>
 
-  <!-- http://docs.aws.amazon.com/lambda/latest/dg/java-create-jar-pkg-maven-no-ide.html -->
   <build>
     <plugins>
       <plugin>
@@ -63,7 +57,6 @@
               <goal>shade</goal>
             </goals>
             <configuration>
-              <!-- remove version from package name -->
               <finalName>${project.artifactId}</finalName>
             </configuration>
           </execution>
