--- a/serverless-java/serverless.yml
+++ b/serverless-java/serverless.yml
@@ -1,18 +1,19 @@
-service: aws-java-simple-http-endpoint
+service: javalambda
 
 frameworkVersion: ">=1.2.0 <2.0.0"
 
 provider:
   name: aws
   runtime: java8
-  
+  stage: lab
+
 package:
-  artifact: target/aws-java-native.jar
+  artifact: target/javalambda.jar
 
 functions:
-  currentTime:
-    handler: com.serverless.Handler
+  hello:
+    handler: com.serverless.Hello
     events:
       - http:
-          path: ping
+          path: hello
           method: get
