--- a/serverless-quarkus/pom.xml
+++ b/serverless-quarkus/pom.xml
@@ -101,7 +101,7 @@
                                 </goals>
                                 <configuration>
                                     <enableHttpUrlHandler>true</enableHttpUrlHandler>
-                                    <additionalBuildArgs>--report-unsupported-elements-at-runtime, -H:ResourceConfigurationFiles=resources-config.json</additionalBuildArgs>
+                                    <additionalBuildArgs>--report-unsupported-elements-at-runtime</additionalBuildArgs>
                                 </configuration>
                             </execution>
                         </executions>
