--- a/serverless-node-super/package.json
+++ b/serverless-node-super/package.json
@@ -39,7 +39,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint && npm run test:unit && npm run build"
+      "pre-push": "npm run lint && npm run test:unit && npm run build"
     }
   },
   "dependencies": {
