--- a/serverless-node-lab/serverless.yml
+++ b/serverless-node-lab/serverless.yml
@@ -13,4 +13,9 @@ functions:
       - http:
           path: hello
           method: get
-          cors: true
+  longHello:
+    handler: src/handler.longHello
+    events:
+      - http:
+          path: longhello
+          method: get
